--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -1,37 +1,18 @@
-{% extends "include/base.html" %}
-{% block main_area %}
-로그인 페이지입니다.
-<br>
+{% extends "member/base.html" %} {% block content %}
+<h2>로그인</h2>
 
-<form name="flogin" method="post">
-{% csrf_token %}
-아이디 : <input type="text" name="member_id">
-비밀번호 : <input type="password" name="passwd">
-
-<br><br>
-<input type="button" value="로그인" onclick="loginChk()">
-<input type="button" value="회원가입" onclick="location.href='/member/register/'">
+<form method="POST">
+  {% csrf_token %}
+  <label>아이디: <input type="text" name="member_id" required /></label
+  ><br /><br />
+  <label>비밀번호: <input type="password" name="passwd" required /></label
+  ><br /><br />
+  <button type="submit">로그인</button>
 </form>
 
-<script>
-function loginChk() {
-    var form = document.flogin;
-    if (form.member_id.value=="") {
-        alert("회원 아이디를 입력해 주십시오.");
-        form.member_id.focus();
-        return;
-    }
-    if (form.passwd.value=="") {
-        alert("비밀번호를 입력해 주십시오.");
-        form.passwd.focus();
-        return;
-    }
-    form.action = "/member/login/";
-    form.submit();
-}
-</script>
-
 {% if message %}
-<script>alert('{{ message }}');</script>
+<p style="color: red">{{ message }}</p>
 {% endif %}
+
+<a href="{% url 'member_reg' %}">회원가입</a>
 {% endblock %}
