--- a/templates/member/member_reg.html
+++ b/templates/member/member_reg.html
@@ -21,7 +21,4 @@
 
 {% if message %}
 <p style="color: red">{{ message }}</p>
-{% endif %}
-
-<a href="{% url 'member_login' %}">로그인</a>
-{% endblock %}
+{% endif %} {% endblock %}
